Bug 340275 - text of tray icon tooltip break line in Chinese
Summary: text of tray icon tooltip break line in Chinese
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL: https://plus.google.com/1112295340942...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-24 05:55 UTC by Guo Yunhe
Modified: 2016-03-28 23:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the bug (27.81 KB, image/png)
2014-10-24 05:56 UTC, Guo Yunhe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guo Yunhe 2014-10-24 05:55:03 UTC
I don't know if the UI part is called tooltip: when your mouse moves on a tray icon, a small rectangle area appear and show some information, see screenshot linked by URL.

This problem appears in KDE with Chinese. The text on KTorrent tooltip break line even though the text is very short (4 Chinese characters).

Some of KDE tray icons have same problem, such as battery icon. Whether the UI is using fixed width for these text of grid layout?

Reproducible: Always

Steps to Reproduce:
1. Run KTorrent.
2. Move mouse KTorrent tray icon.
3. The tooltip show up.

Actual Results:  
even short text (4 Chinese characters) break line.

Expected Results:  
short text (less than 6 Chinese characters) should not break line.
Comment 1 Guo Yunhe 2014-10-24 05:56:08 UTC
Created attachment 89287 [details]
Screenshot of the bug
Comment 2 Nick Shaforostoff 2016-03-28 23:50:50 UTC
Git commit f567a34fabf2eabef3d1d19c4ac6dacaa23d62d7 by Nick Shaforostoff.
Committed on 28/03/2016 at 23:48.
Pushed by shaforo into branch '5.0'.

blindly fix "Download to:" adds "/"
Related: bug 360787

fix tray icon tooltip layout

M  +1    -1    ktorrent/core.cpp
M  +4    -2    ktorrent/dialogs/fileselectdlg.cpp
M  +4    -6    ktorrent/trayicon.cpp

http://commits.kde.org/ktorrent/f567a34fabf2eabef3d1d19c4ac6dacaa23d62d7