blindly fix "Download to:" adds "/" BUG: 360787

fix tray icon tooltip layout
BUG: 340275